--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+node_modules
+npm-debug.log
+.DS_Store
+dist
+.idea
+*.iml
+coverage
+.npmrc
+.vscode
+.eslintrc
+
 # Logs
 logs
 *.log
@@ -102,3 +113,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VSCode
+.vscode/
